--- a/estilos/main.scss
+++ b/estilos/main.scss
@@ -4,4 +4,6 @@
 @import "./parciales/footer";
 @import "./parciales/contenido";
 @import "./parciales/gastronomia";
-@import "./parciales/contacto.scss"
+@import "./parciales/contacto";
+@import "./parciales/var";
+@import "./parciales/queris";
