--- a/estilos/parciales/contacto.scss
+++ b/estilos/parciales/contacto.scss
@@ -1,8 +1,4 @@
-@import "./var";
-@import "./responsive_mixins";
-
-
- /*Contacto*/
+/*Contacto*/
 .contactofondo {
     margin: 1.5rem;
     padding: 1rem;
@@ -51,7 +47,7 @@
 }
 .legend {
     font-weight:bolder;
-    font-size: 1rem;
+    font-size: 1.rem;
 }
 .form-label {
     font-size: 0.8rem;
