--- a/estilos/parciales/_footer.scss
+++ b/estilos/parciales/_footer.scss
@@ -1,3 +1,6 @@
+@import "./var";
+@import "./responsive_mixins";
+
 /*Footer*/
 .separador {
     color:black;
@@ -5,7 +8,7 @@
 }
 .footer {
     background: #0001;
-    display: flex;
+    display:inline;
     margin-top: 1rem;
     padding: 0.5rem 0 1rem 0;  
     text-align: center;
