--- a/estilos/parciales/_hero.scss
+++ b/estilos/parciales/_hero.scss
@@ -1,3 +1,8 @@
+@import "./var";
+@import "./responsive_mixins";
+
+
+
 /*MAIN*/
 
 .main {
@@ -33,7 +38,7 @@
     margin: 0;
 }
 
-.buttom {
+.button {
     font-weight: 400;
     font-size: 15px;
     color:#000000;
